Fix issue when viewing on mobile being able to scroll horizontally all the content

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -67,3 +67,9 @@ pre code{
 p {
     margin: 30px 0 !important;
 }
+
+.intro-header {
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
+  margin-right: calc(-50vw + 50%);
+}
